# TC72XX_LxG1.0.10mp5_OpenSrc

./: Makefile  README.docx  README.md  build_gpl.sh  make.common  make.deprules  make.fap  version.make
bcmdrivers/: Makefile
hostTools/: Makefile  ProgramStore2  addvtoken.c  bcmImageBuilder.c  cmplzma  cmplzma.cpp  createimg.c  fakeroot.tar.bz2  lzo-2.06.tar.bz2  mkfs.jffs2  zlib-1.2.5.tar.bz2
hostTools/doxygen/: INSTALL  README  configure  make.bat
hostTools/doxygen/doc/: Makefile  language.doc  language.tpl  mailto.txt  maintainers.txt  translator.py
hostTools/doxygen/examples/: Makefile
hostTools/doxygen/libmd5/: Makefile  Makefile.libmd5  libmd5.pro
hostTools/doxygen/libpng/: Makefile  Makefile.libpng  adler32.c  compress.c  crc32.c  deflate.c  deflate.h  gzio.c  libpng.pro  trees.c  uncompr.c  zconf.h  zutil.c  zutil.h
hostTools/doxygen/qtools/: Makefile  qtools.pro
hostTools/doxygen/src/: Makefile  Makefile.in  Makefile.libdoxycfg  (+153 more)
hostTools/fakeroot/: Makefile.am  Makefile.in  README  acinclude.m4  aclocal.m4  communicate.c  communicate.h  config.h.in  configure  configure.ac  faked.c  libfakeroot.c  ltmain.sh  message.h  wrapfunc.inp
hostTools/fakeroot/contrib/Fakeroot-Stat-1.8.8/: MANIFEST  META.yml  Makefile.PL  README  Stat.xs
hostTools/fakeroot/contrib/Fakeroot-Stat-1.8.8/lib/Fakeroot/: Stat.pm
hostTools/fakeroot/contrib/Fakeroot-Stat-1.8.8/t/: Fakeroot-Stat.t
hostTools/fakeroot/debian/: changelog  control  copyright  fakeroot.postinst.in  fakeroot.postrm  fakeroot.prerm  rules
hostTools/fakeroot/doc/: Makefile.am  Makefile.in  fakeroot.1
hostTools/fakeroot/doc/es/: Makefile.am  Makefile.in  faked.1  fakeroot.1
hostTools/fakeroot/doc/fr/: Makefile.am  Makefile.in  faked.1  fakeroot.1
hostTools/fakeroot/doc/nl/: Makefile.am  Makefile.in  faked.1  fakeroot.1
hostTools/fakeroot/doc/po4a/: addendum.1.es  addendum.1.fr  addendum.1.nl  addendum.1.sv  po4a.cfg
hostTools/fakeroot/doc/po4a/po/: es.po  fakeroot.pot  fr.po  nl.po  sv.po
hostTools/fakeroot/doc/sv/: Makefile.am  Makefile.in  faked.1  fakeroot.1
hostTools/fakeroot/scripts/: Makefile.am  Makefile.in  fakeroot.in
hostTools/fakeroot/statconv/glibc/linux/alpha/: stats.h
hostTools/fakeroot/test/: Makefile.am  Makefile.in  compare-tar  t.echoarg  t.mknod  t.tar  t.touchinstall  tartest
hostTools/imgbin2hex/: Makefile
hostTools/jffs2/: Makefile  mkfs.jffs2.c  mkjffs2
hostTools/libcreduction/: Makefile  extralibs.mak  mklibs.py
hostTools/mtd-utils/: Makefile  common.mk
hostTools/scripts/: Menuconfig  defconfig-bcm.template  gendefconfig
hostTools/squashfs/: Makefile  sqlzma.h  sqmagic.h  squashfs_fs_sb.h
hostTools/squashfs_4.0/: Makefile  mksquashfs.c  sqlzma.h
kernel/linux/: Makefile  README  extraversion.mk
targets/: buildFS  buildFS2  config.in  initramfsdevs  makeDevs
targets/3384/: 3384
targets/3384TP1Lite/: 3384TP1Lite
targets/93329/: 93329
targets/93380LxG/: 93380LxG
targets/93383APRouter/: 93383APRouter
targets/93383LxG/: 93383LxG
targets/93383LxGNand/: 93383LxGNand  devtable.txt
targets/93383LxGTP1/: 93383LxGTP1
targets/93383LxGTP1Nand/: 93383LxGTP1Nand
targets/fs.apps/: readme.txt
userspace/: Makefile
userspace/gpl/: Makefile
(+2734 files in other folders)
